# USBvalve

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.pico1  Dockerfile.pico2  Dockerfile.sdk  LICENSE  README.md  build_all.sh  pico_sdk_import.cmake
PCB/USBpipe/: BOM_USBpipe_Rev1.ods  BOM_USBpipe_Rev1.x.xlsx
STL/: Box_USBvalve.stl  Box_USBvalve_1.1.stl  Cover_32_USBvalve.stl  USBvalve_sliding_cover.stl
STL/1.2/: Box_USBvalve_1.2.stl  Cover_32_USBvalve_1.2.stl
STL/1.2_64/: renclosure.stl  renclosure_backplate.stl  renclosure_spacer.stl
STL/1.2_64_simple/: SimpleEnclosurex64.stl  SimpleEnclosurex64_backplate.stl  SimpleEnclosurex64_spacer.stl
USBvalve/: USBvalve.ino  background.h  ramdisk.h
data/: background.h  font6x8.h  ramdisk.h
docs/: BUILDING-1.1.md
firmware/: USBvalve-0.10.0-32.uf2  USBvalve-0.10.0-64.uf2  USBvalve-0.11.0-32.uf2  USBvalve-0.11.0-64.uf2  USBvalve-0.12.0-32.uf2  USBvalve-0.12.0-64.uf2  USBvalve-0.12.1-32.uf2  USBvalve-0.12.1-64.uf2  USBvalve-0.12.2-32.uf2  USBvalve-0.12.2-64.uf2  USBvalve-0.12.3-32.uf2  USBvalve-0.12.3-64.uf2  USBvalve-0.13.0-32.uf2  USBvalve-0.13.0-64.uf2  USBvalve-0.13.1-32.uf2  USBvalve-0.13.1-64.uf2  USBvalve-0.14.0-32.uf2  USBvalve-0.14.0-64.uf2  USBvalve-0.14.1-32.uf2  USBvalve-0.14.1-64.uf2  USBvalve-0.14.2-32.uf2  USBvalve-0.14.2-64.uf2  USBvalve-0.14.3-32.uf2  USBvalve-0.14.3-64.uf2  USBvalve-0.14.4-32.uf2  USBvalve-0.14.4-64.uf2  USBvalve-0.15.0-32.uf2  USBvalve-0.15.0-64.uf2  USBvalve-0.15.0-PIWATCH.uf2  USBvalve-0.15.1-32.uf2  USBvalve-0.15.1-64.uf2  USBvalve-0.15.1-PIWATCH.uf2  USBvalve-0.16.0-32.uf2  USBvalve-0.16.0-64.uf2  USBvalve-0.16.0-PIWATCH.uf2  USBvalve-0.17.0-32.uf2  USBvalve-0.17.0-64.uf2  USBvalve-0.17.0-PIWATCH.uf2  USBvalve-0.18.0-32.uf2  USBvalve-0.18.0-64.uf2  (+47 more)
firmware/reset/: Blink_nano.ino.elf.uf2  Blink_pico.ino.elf.uf2
src/: CMakeLists.txt  USBvalve.ino  display.c  display.h  hid_handler.c  hid_handler.h  main.c  quark.c  quark.h  ramdisk.h  serial_output.c  serial_output.h  tusb_config.h  usb_config.h  usb_descriptors.c  usb_device.c  usb_device.h  usb_host.c  usb_host.h
utils/: create_ramdisk.py  fat.fs
